# DraftGen

./: .gitignore  DraftGen.cabal  GenChangelogs.hs  README.md  cabal.project  cabal.project.freeze  flake.nix  fourmolu.yaml  profile.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml  tests.yaml
data/: testing.json
nix/overlays/alejandra/: default.nix  remove-ads.patch
prelude/: dg-prelude.cabal
prelude/src/: Prelude.hs
src/: Main.hs
src/DraftGen/: CLI.hs  Encode.hs  File.hs  Generate.hs  Optics.hs  Types.hs  Util.hs
src/DraftGen/Optics/: Operators.hs  Wreq.hs
test/json/: Bilbo, Retired Burglar.json  Gandalf the White.json  Minas Tirith.json  Rivendell.json  Sauron, the Dark Lord.json
test/src/: Main.hs
