cabal-version:       3.6
category:            Tool
name:                DraftGen
version:             1.5.0.0
synopsis:            Tool for generating booster packs in MTG
description:
  Please see the README on GitHub at <https://github.com/skykanin/draftgen#readme>
homepage:            https://github.com/skykanin/draftgen
bug-reports:         https://github.com/skykanin/draftgen/issues
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              skykanin
maintainer:          3789764+skykanin@users.noreply.github.com
copyright:           skykanin
build-type:          Simple
tested-with:         GHC == 9.2.3
extra-source-files:  README.md

common shared-properties
  default-language: GHC2021
  default-extensions: DeriveAnyClass 
                    , DerivingStrategies
                    , DuplicateRecordFields
                    , NoFieldSelectors
                    , OverloadedLabels
                    , OverloadedStrings

executable dg
  import:              shared-properties
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base ^>= 4.16.2.0
                     , DraftGen
  ghc-options:         -threaded -Wall -O2

library
  import:              shared-properties
  exposed-modules:     CLI
                     , Encode
                     , File
                     , Generate
                     , Optics
                     , Optics.Operators
                     , Optics.Wreq
                     , Types
                     , Util
  build-depends:       base ^>= 4.16.2.0
                     , aeson ^>= 2.0.0.0
                     , bytestring ^>= 0.11.1.0
                     , containers ^>= 0.6.4.1
                     , directory ^>= 1.3.6.1
                     , filepath ^>= 1.4.2.1
                     , hashable ^>= 1.3.1.0
                     , optics-core ^>= 0.4.0
                     , optparse-generic ^>= 1.4.4
                     , random ^>= 1.2.0
                     , transformers ^>= 0.5.6.2
                     , unordered-containers ^>= 0.2.13.0
                     , wreq ^>= 0.5.3.3
  hs-source-dirs:      src/DraftGen
  ghc-options:         -Wall
                       -Wmissing-deriving-strategies
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wunused-packages
                       -Wunused-type-patterns
                       -Wno-name-shadowing
                       -Wno-unticked-promoted-constructors

