cabal-version:      3.6
category:           Tool
name:               DraftGen
version:            1.5.1.0
synopsis:           Tool for generating booster packs in MTG
description:
  Please see the README on GitHub at <https://github.com/skykanin/draftgen#readme>

homepage:           https://github.com/skykanin/draftgen
bug-reports:        https://github.com/skykanin/draftgen/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             skykanin
maintainer:         3789764+skykanin@users.noreply.github.com
copyright:          skykanin
build-type:         Simple
tested-with:        GHC ==9.4.6
extra-source-files: README.md

common shared-properties
  default-language:   GHC2021
  default-extensions:
    NoFieldSelectors
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings
    OverloadedRecordDot

executable dg
  import:         shared-properties
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:
    , base      ^>=4.17.2.0
    , DraftGen

  ghc-options:    -threaded -Wall -O2

library
  import:          shared-properties
  exposed-modules:
    CLI
    Encode
    File
    Generate
    Optics
    Optics.Operators
    Types
    Util

  build-depends:
    , aeson
    , base                  ^>=4.17.2.0
    , bytestring
    , containers
    , directory
    , filepath
    , hashable
    , http-client
    , http-client-tls
    , optics-core
    , optparse-generic
    , random
    , transformers
    , unordered-containers

  hs-source-dirs:  src/DraftGen
  ghc-options:
    -Wall -Wmissing-deriving-strategies -Wmissing-export-lists
    -Wpartial-fields -Wredundant-constraints -Wunused-packages
    -Wunused-type-patterns -Wno-name-shadowing
