cabal-version:      3.6
category:           Tool
name:               DraftGen
version:            1.5.2.0
synopsis:           Tool for generating booster packs in MTG
description:
  Please see the README on GitHub at <https://github.com/skykanin/draftgen#readme>

homepage:           https://github.com/skykanin/draftgen
bug-reports:        https://github.com/skykanin/draftgen/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             skykanin
maintainer:         3789764+skykanin@users.noreply.github.com
copyright:          skykanin
build-type:         Simple
tested-with:        GHC ==9.8.4
extra-source-files: README.md

common common-language
  default-language:   GHC2021
  default-extensions:
    NoFieldSelectors
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings

common common-ghc-options
  ghc-options:
    -Wall -Wmissing-deriving-strategies -Wmissing-export-lists
    -Wpartial-fields -Wredundant-constraints -Wunused-packages
    -Wunused-type-patterns -Wno-name-shadowing

common common-stanza
  import: common-language
  mixins:
    base hiding (Prelude),
    dg-prelude (Prelude)

executable dg
  import:         common-language
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:
    , base
    , DraftGen

  ghc-options:    -threaded -Wall -O2

library
  import:          common-stanza, common-ghc-options
  exposed-modules:
    CLI
    Encode
    File
    Generate
    Optics
    Optics.Operators
    Types
    Util

  build-depends:
    , aeson
    , async
    , base                  ^>=4.19.2.0
    , bytestring
    , containers
    , dg-prelude
    , directory
    , filepath
    , hashable
    , http-client
    , http-client-tls
    , optics-core
    , optparse-generic
    , random
    , transformers
    , unordered-containers

  other-modules:
    Paths_DraftGen

  hs-source-dirs:  src/DraftGen

test-suite unit-tests
  import:         common-stanza
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/src
  main-is:        Main.hs
  other-modules:
  build-depends:
    , aeson
    , base           ^>=4.19.2.0
    , dg-prelude
    , DraftGen
    , exceptions
    , filepath
    , pretty-simple
    , sandwich
    , unordered-containers

  ghc-options:    -threaded
